--- a/.github/workflows/pass-args-no.yml
+++ b/.github/workflows/pass-args-no.yml
@@ -12,7 +12,7 @@ jobs:
         run: pwd && ls -la && find ./.github/workflows
       - id: foo
         uses: ./.github/actions/hello-world
-        with:
-          who-to-greet: 'Mona the Octocat'
+#        with:
+#          who-to-greet: 'Mona the Octocat'
 #      - run: echo random-number ${{ steps.foo.outputs.random-number }}
 #        shell: bash
