--- a/.github/actions/goodbye/action.yml
+++ b/.github/actions/goodbye/action.yml
@@ -8,7 +8,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo I dont know why you say goodbye ${{ inputs.who-to-greet }}.
+    - run: echo I dont know why you say goodbye ${{ inputs.who-to-bye }}.
       shell: bash
     - run: echo github-actions-path ${{ github.action_path }}
       shell: bash
