--- a/.github/actions/hello-world/action.yml
+++ b/.github/actions/hello-world/action.yml
@@ -20,8 +20,8 @@ runs:
       uses: olafurpg/setup-scala@v10
     - name: Call Goodbye Action
       uses: ./.github/actions/goodbye
-#      with:
-#        who-to-bye: 'Mona the Octocat'
+      with:
+        who-to-bye: 'Mona the Octocat'
 #    - id: random-number-generator
 #      run: echo "::set-output name=random-id::$(echo $RANDOM)"
 #      shell: bash
