stubbing out chipyard build process baby-steps, let's make sure we can call subroutines

--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -8,3 +8,5 @@ jobs:
       - uses: actions/checkout@v2
       - id: install-riscv-toolchain
         uses: ./.github/actions/install-riscv-toolchain
+      - name: show artifact
+        run: cat riscv-toolchain-artifact
