stubbing out chipyard build process baby-steps, let's make sure we can call subroutines

--- a/.github/actions/install-riscv-toolchain/action.yml
+++ b/.github/actions/install-riscv-toolchain/action.yml
@@ -6,4 +6,9 @@ runs:
   steps:
     - run: echo Hello > riscv-toolchain-artifact
       shell: bash
+    - name: Call build-toolchain riscv-tools
+      uses: ./.github/actions/toolchain-build
+      with:
+        tools-version: 'riscv-tools'
+
 
