--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -10,3 +10,5 @@ jobs:
         uses: ./.github/actions/install-riscv-toolchain
       - name: show artifact
         run: cat riscv-toolchain-artifact
+      - name: Show directory
+        run: ls -ltr
