--- a/.github/actions/toolchain-build/action.yml
+++ b/.github/actions/toolchain-build/action.yml
@@ -8,6 +8,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo TOOLCHAIN-BUILD ${{ inputs.tools-version }} > riscv-toolchain-artifact
+    - run: echo TOOLCHAIN-BUILD ${{ inputs.tools-version }} > ${{ inputs.tools-version }}-toolchain-artifact
       shell: bash
 
