--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -5,8 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     name: build-and-test-chipyard-integration
     steps:
-      - uses: actions/checkout@v2
       - id: install-riscv-toolchain
+        uses: ./.github/actions/install-riscv-toolchain
+      - id: install-esp-toolchain
         uses: ./.github/actions/install-riscv-toolchain
       - name: show artifact
         run: cat riscv-toolchain-artifact
