--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -9,8 +9,10 @@ jobs:
       - id: install-riscv-toolchain
         uses: ./.github/actions/install-riscv-toolchain
       - id: install-esp-toolchain
-        uses: ./.github/actions/install-riscv-toolchain
+        uses: ./.github/actions/install-esp-toolchain
       - name: show artifact
-        run: cat riscv-toolchain-artifact
+        run: |
+          cat riscv-tools-toolchain-artifact
+          cat esp-tools-toolchain-artifact
       - name: Show directory
         run: ls -ltr
