get rid of goodbye action experimenting with where I can put env command in composite action

--- a/.github/actions/install-verilator/action.yml
+++ b/.github/actions/install-verilator/action.yml
@@ -1,5 +1,5 @@
-name: install-riscv-toolchain
-description: 'Builds the RISCV toolchain'
+name: install-verilator
+description: 'installs verilator on remote build machine'
 
 runs:
   using: "composite"
