Still trying to get env in composite action

--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -11,6 +11,8 @@ jobs:
       - id: install-esp-toolchain
         uses: ./.github/actions/install-esp-toolchain
       - id: build-verilator
+        env:
+          secret: MySshSecret
         uses: ./.github/actions/install-verilator
       - name: show artifact
         run: |
