Passing them in worked, making sure they are used right

--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -19,5 +19,6 @@ jobs:
         run: |
           cat riscv-tools-toolchain-artifact
           cat esp-tools-toolchain-artifact
+          cat build-verilator
       - name: Show directory
         run: ls -ltr
