--- a/.github/actions/install-verilator/action.yml
+++ b/.github/actions/install-verilator/action.yml
@@ -12,5 +12,7 @@ runs:
   using: "composite"
   steps:
     - name: build-verilator
-      run: echo building verilator remote on BUILDSERVER is ${{ inputs.build-user }}@${{ inputs.build-server }}
+      run: |
+        echo building verilator remote on BUILDSERVER is ${{ inputs.build-user }}@${{ inputs.build-server }}
+        echo building verilator remote on BUILDSERVER is ${{ inputs.build-user }}@${{ inputs.build-server }} >> build-verilator
       shell: bash
