Passing them in worked, making sure they are used right Trying to use cache now

--- a/.github/actions/toolchain-build/action.yml
+++ b/.github/actions/toolchain-build/action.yml
@@ -15,6 +15,7 @@ runs:
       with:
         path: ${{ inputs.tools-version }}
         key: ${{ inputs.tools-version }}
+        restore-keys: ${{ inputs.tools-version }}
     - name: run stuff
       run: |
         echo "abcdef" > ${{ inputs.tools-version }}
