Passing them in worked, making sure they are used right Trying to use cache now

--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -15,10 +15,13 @@ jobs:
         with:
           build-server: ${{ secrets.BUILDSERVER }}
           build-user: ${{ secrets.BUILDUSER }}
+      - id: run-fixed-key
+        uses: ./.github/actions/fixed-key
       - name: show artifact
         run: |
           cat riscv-tools-toolchain-artifact
           cat esp-tools-toolchain-artifact
           cat build-verilator
+          cat MY-CACHE-KEY
       - name: Show directory
         run: ls -ltr
