Passing them in worked, making sure they are used right Added example of cache using a fixed string instead a input var

--- a/.github/actions/fixed-key/action.yml
+++ b/.github/actions/fixed-key/action.yml
@@ -13,8 +13,8 @@ runs:
         key: MY-CACHE-KEY
         restore-keys: MY-CACHE-KEY
     - name: run stuff
-      run: |
-        echo "fixed-key-data" > MY-CACHE-KEY
+      if: steps.toolchain-id.outputs.cache-hit != 'true'
+      run: echo "fixed-key-data" > MY-CACHE-KEY
       shell: bash
 
 
