Passing them in worked, making sure they are used right Added example of cache using a fixed string instead a input var

--- a/.github/actions/toolchain-build/action.yml
+++ b/.github/actions/toolchain-build/action.yml
@@ -8,8 +8,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo TOOLCHAIN-BUILD ${{ inputs.tools-version }} > ${{ inputs.tools-version }}-toolchain-artifact
-      shell: bash
+#    - run: echo TOOLCHAIN-BUILD ${{ inputs.tools-version }} > ${{ inputs.tools-version }}-toolchain-artifact
+#      shell: bash
     - uses: actions/cache@v2
       id: toolchain-id
       with:
