Passing them in worked, making sure they are used right Added example of cache using a fixed string instead a input var

--- a/.github/actions/toolchain-build/action.yml
+++ b/.github/actions/toolchain-build/action.yml
@@ -18,7 +18,7 @@ runs:
         restore-keys: ${{ inputs.tools-version }}
     - name: generate data if cache miss
       run: |
-        if [[ ${{ steps.toolchain-id.outputs.cache-hit }} != 'true' ]]; then
+        if [[ "${{ steps.toolchain-id.outputs.cache-hit }}" != 'true' ]]; then
           echo "fixed-key-data" > MY-CACHE-KEY
         else
           echo "cache hit do not generate data"
