Passing them in worked, making sure they are used right Added example of cache using a fixed string instead a input var

--- a/.github/actions/toolchain-build/action.yml
+++ b/.github/actions/toolchain-build/action.yml
@@ -19,7 +19,7 @@ runs:
     - name: generate data if cache miss
       run: |
         if [[ "${{ steps.toolchain-id.outputs.cache-hit }}" != 'true' ]]; then
-          echo "COMPILED ${{ inputs.tools-version" > ${{ inputs.tools-version }}-toolchain-artifact
+          echo "COMPILED ${{ inputs.tools-version }}" > ${{ inputs.tools-version }}-toolchain-artifact
         else
           echo "cache hit do not generate data"
         fi
