Passing them in worked, making sure they are used right Added example of cache using a fixed string instead a input var

--- a/.github/actions/install-riscv-toolchain/action.yml
+++ b/.github/actions/install-riscv-toolchain/action.yml
@@ -4,7 +4,7 @@ description: 'Builds the RISCV toolchain'
 runs:
   using: "composite"
   steps:
-    - name: Call build-toolchain riscv-tools
+    - id: build-riscv-tools-toolchain
       uses: ./.github/actions/toolchain-build
       with:
         tools-version: 'riscv-tools'
