--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -11,7 +11,7 @@ jobs:
       - id: install-riscv-toolchain-direct
         uses: ./.github/actions/toolchain-build
         with:
-          tools-version: 'RISCV-DIRECT'
+          tools-version: 'RISCVDIRECT'
       - id: install-esp-toolchain
         uses: ./.github/actions/install-esp-toolchain
       - id: build-verilator
