Passing them in worked, making sure they are used right Added example of cache using a fixed string instead a input var

--- a/.github/actions/toolchain-build/action.yml
+++ b/.github/actions/toolchain-build/action.yml
@@ -15,7 +15,7 @@ runs:
       with:
         path: ${{ inputs.tools-version }}-toolchain-artifact
         key: ${{ inputs.tools-version }}
-        restore-keys: ${{ inputs.tools-version }}
+#        restore-keys: ${{ inputs.tools-version }}
     - name: generate data if cache miss
       run: |
         if [[ "${{ steps.toolchain-id.outputs.cache-hit }}" != 'true' ]]; then
