--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -25,8 +25,8 @@ jobs:
         run: ls -ltr
       - name: show artifacts created
         run: |
-          cat riscv-tools-toolchain-artifact
-          cat esp-tools-toolchain-artifact
-          cat build-verilator
           cat MY-CACHE-KEY
-          cat RISCVDIRECT-toolchain-artifact
+          for i in *artifact ; do
+            echo SHOWING $i
+            cat $i
+          done
