Trying again with new cache keys

--- a/.github/workflows/build-and-test-chipyard-integration.yml
+++ b/.github/workflows/build-and-test-chipyard-integration.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           build-server: ${{ secrets.BUILDSERVER }}
           build-user: ${{ secrets.BUILDUSER }}
-      - id: run-fixed-key
-        uses: ./.github/actions/fixed-key
+#      - id: run-fixed-key
+#        uses: ./.github/actions/fixed-key
       - name: Show directory
         run: ls -ltr
       - name: show artifacts created
