testing top level env var access in script

--- a/.github/actions/instantiate-data-1/action.yml
+++ b/.github/actions/instantiate-data-1/action.yml
@@ -21,5 +21,8 @@ runs:
           echo "cache hit do not generate data"
         fi
       shell: bash
+    - name: Run a script
+      run: ./github/scripts/script.sh
+      shell: bash
 
 
