--- a/.github/actions/instantiate-data-1/action.yml
+++ b/.github/actions/instantiate-data-1/action.yml
@@ -22,7 +22,7 @@ runs:
         fi
       shell: bash
     - name: Run a script
-      run: ./.github/scripts/script.sh
+      run: sh ./.github/scripts/script.sh
       shell: bash
 
 
